# political-polarisation

./: .gitignore  README.md  flake.nix  pyproject.toml  pytest.ini  story_characters.csv  test_story.txt  uk_manifesto_chunks_by_11_themes.csv
nix/: uv-python.nix
political_polarisation/: cli.py  context.py  main.py  phrasal.py  utils.py
tests/: test_main.py
