[project]
name = "political-polarisation"
version = "0.1.0"
description = "Political Polarisation Experiment for the UK Government 2019 / 2024"
requires-python = ">=3.12"
dependencies = [
    "vectorlink-gpu",
    "vectorlink-py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
vectorlink-gpu = { git = "ssh://git@github.com/vectorlink-ai/vectorlink-gpu" }
vectorlink-py = { git = "ssh://git@github.com/vectorlink-ai/vectorlink.py" }
