[project]
name = "political-polarisation"
version = "0.1.0"
description = "Political Polarisation Experiment for the UK Government 2019 / 2024"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.24",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.33",
    "pydantic>=2.11.3",
    "en-core-web-sm",
    "spacy>=3.8.4",
    "langchain-community>=0.3.22",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "pinecone>=6.0.2",
    "langchain-ollama>=0.3.2",
    "langchain-anthropic>=0.3.12",
    "rich>=14.0.0",
    "transformers>=4.51.3",
    "torch>=2.7.0",
    "fastcoref>=2.1.6",
    "backoff>=2.2.1",
    "langchain-aws>=0.2.22",
    "sentence-transformers>=4.1.0",
    "datafusion>=46.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[project.scripts]
ingest-csv = 'political_polarisation.cli:cli_ingest_csv'
create-chunks = 'political_polarisation.cli:cli_create_chunks'
vectorize = 'political_polarisation.cli:cli_vectorize'
process-csv = 'political_polarisation.cli:cli_process_csv'
compare-categories = 'political_polarisation.cli:cli_compare_categories'

[tool.hatch.build.targets.wheel]
packages = ["political_polarisation"]
